// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flow Modern code generation #generateSource() should generate simple nested query operations including input variables 1`] = `
"/* @flow */
//  This file was automatically generated and should not be edited.

// The episodes in the Star Wars trilogy
export type Episode = 
  | \\"NEWHOPE\\" // Star Wars Episode IV: A New Hope, released in 1977.
  | \\"EMPIRE\\" // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  | \\"JEDI\\" // Star Wars Episode VI: Return of the Jedi, released in 1983.

export type HeroAndFriendsNamesQuery = {|
  hero?: {|
    __typename: \\"Human\\" | \\"Droid\\"
    name: string
    friends: ?Array<?Character>
  |}
|};"
`;

exports[`Flow Modern code generation #generateSource() should generate simple query operations 1`] = `
"/* @flow */
//  This file was automatically generated and should not be edited.
export type HeroNameQuery = {|
  hero?: {|
    __typename: \\"Human\\" | \\"Droid\\"
    name: string
  |}
|};"
`;

exports[`Flow Modern code generation #generateSource() should generate simple query operations including input variables 1`] = `
"/* @flow */
//  This file was automatically generated and should not be edited.

// The episodes in the Star Wars trilogy
export type Episode = 
  | \\"NEWHOPE\\" // Star Wars Episode IV: A New Hope, released in 1977.
  | \\"EMPIRE\\" // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  | \\"JEDI\\" // Star Wars Episode VI: Return of the Jedi, released in 1983.

export type HeroNameQuery = {|
  hero?: {|
    __typename: \\"Human\\" | \\"Droid\\"
    name: string
  |}
|};"
`;
